<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kcs_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/kcs_header" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Panduan  Deposit"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/panduan_topup"
                        android:textColor="@color/black" />


                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:src="@drawable/bni_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/rek_bni"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:src="@drawable/mandiri_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/rek_mandiri"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:src="@drawable/bca_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/rek_bca"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/panduan_konfirmasi"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/wa_anang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/wa_anang"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/wa_adang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/wa_adang"
                        android:textColor="@color/black"
                        android:layout_marginBottom="30dp"/>
                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>